--- a/styles/info-series.css
+++ b/styles/info-series.css
@@ -272,6 +272,33 @@ main {
   }
   }
 
+  @media screen and (max-width: 640px) {
+    body {
+        font-size: 70%;
+    }
+
+    .header {
+        display: flex;
+        position: fixed;
+        justify-content: center;
+        padding: 0;
+        gap: 0.5em;
+    }
+
+    .headerimg {
+        width: 2.5em;
+    }
+
+    .header nav ul {
+        display: flex;
+        gap: .6em;
+    }
+
+    .header li {
+        font-size: .6em;
+    }
+}
+
   @media (max-width: 425px) {
 
   .pelicula-hero {
@@ -388,31 +415,10 @@ main {
     margin-bottom: 2rem;
   }
   
-}
+  .similares{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-row-gap: 2.5rem;
+  }
 
-@media screen and (max-width: 640px) {
-    body {
-        font-size: 70%;
-    }
-
-    .header {
-        display: flex;
-        position: fixed;
-        justify-content: center;
-        padding: 0;
-        gap: 0.5em;
-    }
-
-    .headerimg {
-        width: 2.5em;
-    }
-
-    .header nav ul {
-        display: flex;
-        gap: .6em;
-    }
-
-    .header li {
-        font-size: .6em;
-    }
 }
