--- a/styles/register.css
+++ b/styles/register.css
@@ -595,6 +595,14 @@ span {
     }
 }
 
+    .footer{
+        margin-top: 5rem;
+    }
+
+    body{
+        margin-top: 5rem;
+    }
+
 @media screen and (max-width: 64em) and (min-width: 49em) {
     body {
         font-size: 70%;
