--- a/styles/usuario.css
+++ b/styles/usuario.css
@@ -99,6 +99,11 @@ form {
     text-decoration: none;
 }
 
+.datosPerfil h3 {
+    width: 100%;
+    max-width: 12.5rem;
+}
+
 @media (max-width: 768px)  {
     .header {
         display: flex;
