--- a/styles/login-register.css
+++ b/styles/login-register.css
@@ -20,7 +20,7 @@ main.main-login {
     background: linear-gradient(to bottom, #000000 0%, #1a1a1a 100%);
     background-color: #000;
     color: white;
-    height: 90vh;
+    height: 51.25rem;
     display: flex;
     flex-direction: column;
     align-items: center;
