--- a/styles/login-register.css
+++ b/styles/login-register.css
@@ -24,6 +24,7 @@ main.main-login {
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: 90vh;
 }
 
 .logearse {
