--- a/styles/usuario.css
+++ b/styles/usuario.css
@@ -4,12 +4,12 @@
     box-sizing: border-box;
     font-family: "Open Sans", sans-serif;
 
-
 }
 body {
     color: white;
     background: linear-gradient(to bottom, #000000 0%, #1a1a1a 100%);
     background-color: #000;
+    margin-top: 5%;
 }
 
 
