--- a/styles/register.css
+++ b/styles/register.css
@@ -8,15 +8,20 @@
 
 body {
     background: #000000;
-    height: 100vh;              /*vh*/
+    min-height: 100vh;          /*Agregado VER*/
+    display: flex;              /*Agregado VER*/
+    flex-direction: column;     /*Agregado VER*/
 }
 
 .main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 80vh;               /*vh*/
+    /* height: 80vh; */
     justify-content: center;
+    flex: 1;
+    row-gap: 1em;
+    padding: 1em 0;
 }
 
 /* Titulos */
@@ -41,7 +46,7 @@ body {
     display: flex;
     flex-direction: column;
     position: relative;
-    top: 3em;
+    row-gap: 1em;
 }
 
 .planesYFormulario .planes {
@@ -75,6 +80,7 @@ body {
 
 .formulario {
     display: flex;
+    justify-content: space-between;
 }
 
 .formulario .datosDeUsuario {
@@ -83,7 +89,6 @@ body {
     justify-content: center;
     gap: 1.2em;
     position: relative;
-    top: 2em;
 }
 
 .formulario .datosDeUsuario input {
@@ -129,8 +134,6 @@ span {
     flex-direction: column;
     justify-content: space-around;
     position: relative;
-    left: 10em;
-    top: 2em;
 }
 
 .metodoDePago__tarjetaDeDebitoOCredito__numeroDeTarjeta {
@@ -167,7 +170,8 @@ span {
     font-size: 1.2em;
 }
 
-.metodoDePago .cuponDePago .cuponDePago__pagoFacil, .cuponDePago__rapiPago {
+.metodoDePago .cuponDePago .cuponDePago__pagoFacil,
+.cuponDePago__rapiPago {
     font-size: 1.1em;
 }
 
