--- a/styles/main.css
+++ b/styles/main.css
@@ -214,6 +214,24 @@ main {
     main{
         margin-top: 0;
     }
+
+      .header {
+      display: flex;
+      position: fixed;
+      justify-content: center;
+      padding: 0;
+      gap: 0.5em;
+  }
+
+  .header nav ul {
+    display: flex;
+    gap: .6em;
+  }
+
+  .header li {
+    font-size: .6em;
+  }
+  
     .hero-img{
        width: 10rem;
        height: 10rem;
@@ -264,6 +282,24 @@ main {
     main{
         margin-top: 0;
     }
+
+      .header {
+      display: flex;
+      position: fixed;
+      justify-content: center;
+      padding: 0;
+      gap: 0.5em;
+  }
+
+  .header nav ul {
+    display: flex;
+    gap: .6em;
+  }
+
+  .header li {
+    font-size: .6em;
+  }
+
     .hero-img{
        width: 10rem;
        height: 10rem;
@@ -319,6 +355,23 @@ main {
        height: 10rem;
     }
     
+  .header {
+      display: flex;
+      position: fixed;
+      justify-content: center;
+      padding: 0;
+      gap: 0.5em;
+  }
+
+  .header nav ul {
+    display: flex;
+    gap: .6em;
+  }
+
+  .header li {
+    font-size: .6em;
+  }
+
     .filter-categoria .search-container{
     display: flex;
     align-items: flex-end;
