--- a/styles/headerYFooter.css
+++ b/styles/headerYFooter.css
@@ -122,3 +122,9 @@ footer {
         justify-content: center;
     }
 }
+
+@media screen and (width<740px) {
+  header nav ul {
+    font-size: .825rem;
+  }
+}
