--- a/styles/info-pelicula.css
+++ b/styles/info-pelicula.css
@@ -64,14 +64,14 @@ body {
 }
 
 .btn-comprar {
-  padding: 0.4375rem;
-  gap: 0.625rem;
+  padding: .4375rem;
+  gap: .625rem;
   border: none;
-  border-radius: 0.3125rem;
+  border-radius: .3125rem;
   cursor: pointer;
   width: 12.3125rem;
   height: 2.875rem;
-  border-radius: 0.3125rem;
+  border-radius: .3125rem;
   font-weight: 600;
   text-transform: uppercase;
 }
@@ -111,8 +111,8 @@ main {
 }
 
 .pelicula-similar img:hover {
-  outline: 0.125rem solid white;
-  border-radius: 0.3125rem;
+  outline: .125rem solid white;
+  border-radius: .3125rem;
   cursor: pointer;
 }
 
@@ -129,13 +129,13 @@ main {
   display: flex;
   margin: auto;
   justify-content: space-between;
-  margin-top: 0.625rem;
+  margin-top: .625rem;
   margin-bottom: 6.25rem;
 }
   article {
     display: flex;
     flex-direction: column;
-    gap: 0.625rem;
+    gap: .625rem;
     max-width: 50rem;
 
     span {
@@ -146,7 +146,7 @@ main {
   .img-pelicula-similar{
     width: 16rem;
     height: 10rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: .5rem;
   }
 
 @media (max-width: 1024px) {
@@ -192,7 +192,6 @@ main {
 
   .header {
       display: flex;
-      position: fixed;
       justify-content: center;
       padding: 0;
       gap: 0.5em;
@@ -227,7 +226,7 @@ main {
   }
 
   .genero-li{
-    font-size: 0.8rem;
+    font-size: .8rem;
     margin-left: 3rem;
   }
 
@@ -266,6 +265,71 @@ main {
     margin-bottom: 2rem;
   }
 }
+
+
+@media screen and (width<290px) {
+  h1.pelicula-titulo {
+    font-size: 1.5rem;
+    width: 100%;
+  }
+
+  .genero-li {
+    font-size: 0.6rem;
+  }
+
+  .descripcion {
+        width: 9.375rem;
+        font-size: 0.8rem;
+  }
+
+  .btn-comprar {
+    width: 7.5rem;
+  }
+}
+
+@media screen and (width<250px) {
+  .genero {
+    display: none;
+  }
+
+  .recomendaciones {
+    width: 9.375rem;
+  }
+
+  .recomendacion-titulo {
+    font-size: 1.2rem;
+  }
+
+  .img-pelicula-similar {
+    width: 100%;
+  }
+}
+
+@media screen and (width<191px) {
+  .descripcion {
+    width: 6.25rem;
+    font-size: 0.6rem;
+  }
+
+  .btn-comprar {
+    width: 6.25rem;
+  }
+}
+
+@media screen and (height<600px) {
+  .peli-bg {
+    height: 100vh;
+  }
+
+  .pelicula-detalles {
+    margin-top: 5rem;
+  }
+
+  .recomendaciones {
+    margin-top: 5rem;
+  }
+}
+
 
 /*
 @media screen and (max-width: 640px) {
